@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 2.4.0a6
+current_version = 2.4
 commit = False
 tag = False
 allow_dirty = True
